# netlify-notify-to-slack

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs  webhook.rs
