[package]
name = "netlify-to-slack"
version = "0.1.1"
authors = ["Souma Suzuki <suzuki.souma@hrbrain.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9"
